--- a/partner/manifest.json
+++ b/partner/manifest.json
@@ -77,7 +77,7 @@
             "proxy" : {
                 "/activity1" : {
                     // "target" : "http://192.168.10.151:9391",
-                    "target" : "http://39.106.191.160:9191",
+                    "target" : "https://motiactivity.motimall.cn/api",
                     "changeOrigin" : true,
                     "secure" : false
                 }
