--- a/partner2/manifest.json
+++ b/partner2/manifest.json
@@ -76,8 +76,7 @@
             "disableHostCheck" : true,
             "proxy" : {
                 "/activity1" : {
-                    // "target" : "http://192.168.10.151:9391",
-                    "target" : "http://39.106.191.160:9191",
+                    "target" : "https://motiactivity.motimall.cn/api",
                     "changeOrigin" : true,
                     "secure" : false
                 }
